# Pyutilities

./: README.md
PoetryHW/: .gitignore  README.md
PoetryHW/our_project/: my_script.py  pyproject.toml
PoetryHW/our_project/tests/: test_our_project.py
