[tool.poetry]
name = "our_project"
version = "0.1.0"
description = ""
authors = ["Santiago Humberto Londoño Restrepo <s.londono@getaclub.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
